[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/Rocket/Game.gd" type="Script" id=1]
[ext_resource path="res://scripts/Rocket/Rocket.gd" type="Script" id=2]
[ext_resource path="res://assets/Rocket/playerShip1_orange.png" type="Texture" id=3]
[ext_resource path="res://assets/Rocket/background.png" type="Texture" id=4]
[ext_resource path="res://assets/Flappy/font160.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/Fontes/font150.fnt" type="BitmapFont" id=6]

[sub_resource type="Animation" id=1]

resource/name = "Nova Animação"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 139.783, 47.8768 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 34.1903, 111.954 )

[sub_resource type="Animation" id=4]

resource/name = "Nova Animação"
length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Sprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3, 3.01 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1280 ), Vector2( 0, -1150 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Sprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3, 6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -300, -1280 ), Vector2( -300, 0 ), Vector2( -300, 1280 ) ]
}

[sub_resource type="Animation" id=5]

resource/name = "Nova Animação"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Rocket:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Lifes:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Battery:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../NewPoint:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameOver:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxFlat" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
light_color = Color( 1, 1, 1, 1 )
dark_color = Color( 1, 1, 1, 1 )
border_size = 4
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=9]

resource/name = "start"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("start_label:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Rocket" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1, 0 )
input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Rocket"]

transform/pos = Vector2( 0, 4.70463 )
transform/scale = Vector2( 3, 3 )
z/z = 5
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rocket"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Nova Animação" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Nova Animação"

[node name="Area2D" type="Area2D" parent="Rocket"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 33.3923 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 6.3175 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape1" type="CollisionShape2D" parent="Rocket/Area2D"]

transform/pos = Vector2( 0, 33.3923 )
z/z = 5
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2" type="CollisionShape2D" parent="Rocket/Area2D"]

transform/pos = Vector2( 0, 6.3175 )
z/z = 5
shape = SubResource( 3 )
trigger = false
_update_shape_index = 1

[node name="Meteors" type="Node2D" parent="."]

z/z = 10

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="Background" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Nova Animação" = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Nova Animação"

[node name="Sprite1" type="Sprite" parent="Background"]

transform/pos = Vector2( 0, -295.591 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
centered = false

[node name="Sprite2" type="Sprite" parent="Background"]

transform/pos = Vector2( -300, 952.09 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
centered = false

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="ScoreTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Labels" type="Node2D" parent="."]

z/z = 200

[node name="GameOver" type="Control" parent="Labels"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -39.0
margin/top = -466.0
margin/right = -707.0
margin/bottom = -630.0

[node name="GameOver" type="Label" parent="Labels/GameOver"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 415.0
margin/top = 215.0
margin/right = -2269.0
margin/bottom = -871.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Oh não! 

Os controles desse veículo estão danificados"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/GameOver"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Nova Animação" = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="GameOver1" type="Control" parent="Labels"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -39.0
margin/top = -466.0
margin/right = -707.0
margin/bottom = -630.0

[node name="GameOver" type="Label" parent="Labels/GameOver1"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 405.0
margin/top = 85.0
margin/right = -1196.0
margin/bottom = -372.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "O veículo está danificado"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/GameOver1"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Nova Animação" = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Score" type="Control" parent="Labels"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -572.0
margin/top = 7.0
margin/right = -744.0
margin/bottom = -158.0

[node name="Score" type="Label" parent="Labels/Score"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 99.5
margin/right = -298.0
margin/bottom = -132.5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Lifes" type="Control" parent="Labels"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 7.0
margin/right = -166.0
margin/bottom = -158.0

[node name="Label" type="Label" parent="Labels/Lifes"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 108.5
margin/right = -506.0
margin/bottom = -64.5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "vida"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Lifes" type="Label" parent="Labels/Lifes"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 77.5
margin/right = -292.0
margin/bottom = -240.5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Battery" type="Control" parent="Labels"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Labels/Battery"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 192.0
margin/top = 42.0
margin/right = 588.0
margin/bottom = 60.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Label" type="Label" parent="Labels/Battery"]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 344.0
margin/top = 9.0
margin/right = 1076.0
margin/bottom = 182.0
custom_fonts/font = ExtResource( 5 )
text = "bateria"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewPoint" type="Control" parent="Labels"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 189.0
margin/top = 58.0
margin/right = 590.0
margin/bottom = 126.0

[node name="ProgressBar" type="ProgressBar" parent="Labels/NewPoint"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 13.0
margin/right = 399.0
margin/bottom = 31.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="Label" type="Label" parent="Labels/NewPoint"]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 22.0
margin/top = 36.0
margin/right = 2427.0
margin/bottom = 209.0
custom_fonts/font = ExtResource( 5 )
text = "tempo para novo ponto"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LowerBattery" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = false
autostart = false

[node name="TouchScreen" type="Node2D" parent="."]

[node name="Right" type="TouchScreenButton" parent="TouchScreen"]

transform/pos = Vector2( 592.429, 682.982 )
transform/scale = Vector2( 19.5889, 56.7784 )
z/z = 50
normal = null
pressed = null
bitmask = null
shape = SubResource( 8 )
shape_centered = true
shape_visible = true
passby_press = true
action = "right"
visibility_mode = 0

[node name="Left" type="TouchScreenButton" parent="TouchScreen"]

transform/pos = Vector2( 184.432, 686.073 )
transform/scale = Vector2( 19.5889, 56.7784 )
z/z = 50
normal = null
pressed = null
bitmask = null
shape = SubResource( 8 )
shape_centered = true
shape_visible = true
passby_press = true
action = "left"
visibility_mode = 0

[node name="gamestart" type="Node2D" parent="."]

z/z = 1

[node name="start_label" type="Label" parent="gamestart"]

visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -5.0
margin/top = 326.0
margin/right = 1613.0
margin/bottom = 1688.0
custom_fonts/font = ExtResource( 6 )
text = "toque nos lados da tela para desviar dos meteoros"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="gamestart"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/start = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="die" from="Rocket" to="." method="_on_Rocket_die"]

[connection signal="body_enter" from="Rocket/Area2D" to="Rocket" method="_on_Area2D_body_enter"]

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="LowerBattery" to="." method="_on_LowerBattery_timeout"]

[connection signal="finished" from="gamestart/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


